# fist_django_project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
