[tool.poetry]
name = "fist-django-project"
version = "0.1.0"
description = ""
authors = ["alf <klistron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14.0"
gunicorn = "20.1"
pillow = "9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
